2004-02-27  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/sandbox.scm: requires gauche.redefutil module before
	class redefinition.

2004-02-27  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-spvr.in : fixed bug fixed about ping(error handling).

2004-02-26  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm : implemented schema generation control;
	the module compares it's in-memory persistent class generation and
	in-db persistent class generation, and upgrades/downgrades the
	instance automatically when reading the data into memory.  At the
	commitment time, the in-db persistent instance is upgraded iff
	in-memory generation is newer than in-db generation.
	* test/persistence.scm : added tests for the above change.
	Also a detailed description of tests are written (currently in
	Japanese euc-jp).

2004-02-26  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* cgi/kahua.cgi.in: fixed PATH_INFO bugs.
	fixed some error representation.

2004-02-25  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/plugin.scm: added use-plugin to export.
	* src/kahua/sandbox.scm (make-sandbox-module):
	disable bindings import and require.
	* test/shell.scm, test/testuser.conf: added kahua-shell test.
	* test/usermode.scm: added user exclusive mode test.
	* test/sandbox.scm: added sandbox test.
	* test/plugin.scm: added plugin test.
	* test/Makefile: added 'shell', 'usermode', 'plugin',
	'sandbox' make target.

2004-02-23  Koichi Sasada <sasada@namikilab.taut.ac.jp>

	* src/kahua-spvr.in : bug fixed about ping.
	* src/kahua-server.in (update-server): 
	renamed 'reload-server to update-server. supported updating specified
	file.
	* src/kahua-admin.in : supported 'update' command.
	supported redo command as ":".
	* test/admin.in : add 'update' test.

2004-02-23  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-spvr.in (unexpected-end): 
	added dummy procedure to hook unexpected end of a worker.
	
2004-02-23  Yusei Tahara  <tahara@timedia.co.jp>
